--- a/index.html
+++ b/index.html
@@ -12,189 +12,179 @@
 <body>
     <img class="logo" src="assets/logo_mobile_black 1.svg" alt="synch">
     <div class="short-info">
-        <span><img class="s_icon" src="assets/globe.svg" alt="globe">
+        <span><img src="assets/globe.svg" alt="globe">
             онлайн-курс
         </span>
-        <span><img class="s_icon" src="assets/img_135744.svg" alt="clock">
+        <span><img src="assets/img_135744.svg" alt="clock">
             18 часов
         </span>
-        <span><img class="s_icon" src="assets/calendar_2.svg" alt="calendar">
+        <span><img src="assets/calendar_2.svg" alt="calendar">
             8 сентябрь
         </span>
+    </div>
+
+    <h1>Как смотреть кино</h1>
+    <div class="header">
+        <p>За 8 занятий станем активными зрителями
+            и разберёмся в кинопроцессе</p>
+        <img class="image" src="assets/operator.svg" alt="operator">
+    </div>
+    <div class="conteiner">
+        <p>Зритель для меня
+            не потребитель моей продукции, не судья, а соучастник творчества, соавтор. </p>
+        <p class="name">Андрей Тарковский</p>
+    </div>
+    </div>
+
+    <h2>О курсе</h2>
+    <div class="course">
+        <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
+            нет. При этом без подготовки бывает трудно получить от просмотра удовольствие. </p>
+
+        <p>На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
+            узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
+            рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».</p>
+        <img src="assets/cameraman.svg" alt="cameraman">
+    </div>
+    <div class="a-course">
+        <section>
+            <p>8 занятий</p>
+            <span>Для погружения в кинематограф</span>
+        </section>
+        <section>
+            <p>2 часа</p>
+            <span>Длительность каждого занятия</span>
+        </section>
+        <section>
+            <p>3 недели</p>
+            <span>Длительность курса</span>
+        </section>
+    </div>
+
+    <h2>Формат занятий</h2>
+    <div class="format">
+        <section>
+            <p>Вебинары</p>
+            <span>Занятия проходят онлайн в режиме вебинаров с преподавателем</span>
+        </section>
+        <section>
+            <p>Доступ навсегда</p>
+            <span>Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</span>
+        </section>
+        <section>
+            <p>Общение</p>
+            <span>Вы можете задать вопрос преподавателю на занятии</span>
+        </section>
+    </div>
+
+    <h2>Что узнаем</h2>
+    <ul>
+        <li>Кто чем занят в съёмочной группе;</li>
+        <li>На какие этапы делится кинопроизводство;</li>
+        <li>Как выглядит сценарий фильма и как он меняется по ходу съёмок;</li>
+        <li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить;</li>
+        <li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы;</li>
+        <li>Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров;</li>
+        <li>Как, зная всё это, понимать, о чем фильм.</li>
+    </ul>
+
+    <h2>Программа курса</h2>
+    <div class="programm">
+        <section>
+            <img src="oscar.svg" alt="oscar">
+            <div class="section-content">
+                <p>1. Как создают кино</p>
+                <span>8 сентября 20:00 <br>
+                    Данила Кузнецов</span>
+            </div>
+        </section>
+        <section>
+            <img src="paper.svg" alt="paper">
+            <p>2. Взгляд драматурга</p>
+            <span>10 сентября 20:00 <br>
+                Данила Кузнецов</span>
+        </section>
+        <section>
+            <img src="motor.svg" alt="motor">
+            <p>3. Взгляд режиссёра</p>
+            <span>13 сентября 13:00 <br>
+                Данила Кузнецов</span>
+        </section>
+        <section>
+            <img src="lent.svg" alt="lent">
+            <p>4. Взгляд монтажёра</p>
+            <span>15 сентября 20:00 <br>
+                Данила Кузнецов</span>
+        </section>
+        <section>
+            <img src="mask.svg" alt="mask">
+            <p>5. Жанры в кино</p>
+            <span>17 сентября 20:00 <br>
+                Данила Кузнецов</span>
+        </section>
+        <section>
+            <img src="cinema.svg" alt="cinema">
+            <p>6. Язык кино. Семинар</p>
+            <span>20 сентября 13:00 <br>
+                Данила Кузнецов</span>
+        </section>
+        <section>
+            <img src="lavr.svg" alt="lavr">
+            <p>7. Взгляд кинокритика</p>
+            <span>21 сентября 19:00 <br>
+                Дмитрий Скворцов</span>
+        </section>
+        <section>
+            <img src="bynocularus.svg" alt="bynocularus">
+            <p>8. Осознанный зритель.<br>
+                Семинар</p>
+            <span>22 сентября 19:00 <br>
+                Дмитрий Скворцов</span>
+        </section>
+    </div>
+    <div class="feedback">
+        <h2>Курс прошло уже 1616 человек</h2>
+        <div class="comment">
+            <p>Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному
+                изложению лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все
+                полученные знания на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет ,
+                но и могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!</p>
+
+            <img src="portrait.svg" alt="portrait">
+            <div class="name">
+                <h4>Екатерина Палехова</h4>
+                <img class="fb" src="facebook.svg" alt="facebook">
+            </div>
+
+        </div>
+    </div>
+    <div class="c-start">
+        <h2>Начало курса — 8 сентября</h2>
+        <span>Стоимость</span>
+        <p class="price">3900 руб.</p>
+
         <div>
-            <h1>Как смотреть кино</h1>
-            <div class="h1desc">
-                <p>За 8 занятий станем активными зрителями
-                    и разберёмся в кинопроцессе</p>
-                <img class="image" src="assets/operator.svg" alt="operator">
-            </div>
-            <div class="conteiner">
-                <p>Зритель для меня
-                    не потребитель моей продукции, не судья, а соучастник творчества, соавтор. </p>
-                <p>Андрей Тарковский</p>
-            </div>
+            <span>Для любого уровня</span>
+            <p>Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся знания.</p>
         </div>
         <div>
-            <h2>О курсе</h2>
-            <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
-                нет. При этом без подготовки бывает трудно получить от просмотра удовольствие. <br>
-
-                На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
-                узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
-                рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».</p>
-            <img src="assets/cameraman.svg" alt="cameraman">
-            <div class="a-course">
-                <section>
-                    <h5>8 занятий</h5>
-                    <p>Для погружения в кинематограф</p>
-                </section>
-                <section>
-                    <h5>2 часа</h5>
-                    <p>Длительность каждого занятия</p>
-                </section>
-                <section>
-                    <h5>3 недели</h5>
-                    <p>Длительность курса</p>
-                </section>
-            </div>
+            <span>Проходите сейчас</span>
+            <p>Если вы не успели
+                на вебинар, всегда можете посмотреть запись в личном кабинете.</p>
         </div>
-        <div>
-            <h2>Формат занятий</h2>
-            <section>
-                <h5>Вебинары</h5>
-                <p>Занятия проходят онлайн в режиме вебинаров с преподавателем</p>
-            </section>
-            <section>
-                <h5>Доступ навсегда</h5>
-                <p>Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете</p>
-            </section>
-            <section>
-                <h5>Обещние</h5>
-                <p>Вы можете задать вопрос преподавателю на занятии</p>
-            </section>
-            <div>
-                <h2>Что узнаем</h2>
-                <ul>
-                    <li>Кто чем занят в съёмочной группе;</li>
-                    <li>На какие этапы делится кинопроизводство;</li>
-                    <li>Как выглядит сценарий фильма и как он меняется по ходу съёмок;</li>
-                    <li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить;</li>
-                    <li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы;</li>
-                    <li>Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров;</li>
-                    <li>Как, зная всё это, понимать, о чем фильм.</li>
-                </ul>
-            </div>
-            <div>
-                <h2>Программа курса</h2>
-                <section>
-                    <img src="oscar.svg" alt="oscar">
-                    <div class="programm">
-                        <h4>1. Как создают кино</h4>
-                        <P>8 сентября 20:00 <br>
-                            Данила Кузнецов</P>
-                    </div>
-                </section>
-                <section>
-                    <img src="paper.svg" alt="paper">
-                    <div class="programm">
-                        <h4>2. Взгляд драматурга</h4>
-                        <P>10 сентября 20:00 <br>
-                            Данила Кузнецов</P>
-                    </div>
-                </section>
-                <section>
-                    <img src="motor.svg" alt="motor">
-                    <div class="programm">
-                        <h4>3. Взгляд режиссёра</h4>
-                        <P>13 сентября 13:00 <br>
-                            Данила Кузнецов</P>
-                    </div>
-                </section>
-                <section>
-                    <img src="lent.svg" alt="lent">
-                    <div class="programm">
-                        <h4>4. Взгляд монтажёра</h4>
-                        <P>15 сентября 20:00 <br>
-                            Данила Кузнецов</P>
-                    </div>
-                </section>
-                <section>
-                    <img src="mask.svg" alt="mask">
-                    <div class="programm">
-                        <h4>5. Жанры в кино</h4>
-                        <P>17 сентября 20:00 <br>
-                            Данила Кузнецов</P>
-                    </div>
-                </section>
-                <section>
-                    <img src="cinema.svg" alt="cinema">
-                    <div class="programm">
-                        <h4>6. Язык кино. Семинар</h4>
-                        <P>20 сентября 13:00 <br>
-                            Данила Кузнецов</P>
-                    </div>
-                </section>
-                <section>
-                    <img src="lavr.svg" alt="lavr">
-                    <div class="programm">
-                        <h4>7. Взгляд кинокритика</h4>
-                        <P>21 сентября 19:00 <br>
-                            Дмитрий Скворцов</P>
-                    </div>
-                </section>
-                <section>
-                    <img src="bynocularus.svg" alt="bynocularus">
-                    <div class="programm">
-                        <h4>8. Осознанный зритель.
-                            Семинар</h4>
-                        <P>22 сентября 19:00 <br>
-                            Дмитрий Скворцов</P>
-                    </div>
-                </section>
-            </div>
-            <div class="feedback">
-                <h2>Курс прошло уже 1616 человек</h2>
-                <div class="comment">
-                    <p>Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному
-                        изложению лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все
-                        полученные знания на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет ,
-                        но и могу оценить работу режиссера, оператора, монтажера и т.д. Спасибо!</p>
-                </div>
-                <div class="name-view">
-                    <img class="portrait" src="portrait.svg" alt="portrait">
-                    <div class="name">
-                        <h4>Екатерина Палехова</h4>
-                        <img class="fb" src="facebook.svg" alt="facebook">
-                    </div>
-                </div>
-            </div>
-            <div class="c-start">
-                <h2>Начало курса — 8 сентября</h2>
-                <span>Стоимость</span>
-                <p class="price">3900 руб.</p>
-
-                <div>
-                    <span>Для любого уровня</span>
-                    <p>Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся знания.</p>
-                </div>
-                <div>
-                    <span>Проходите сейчас</span>
-                    <p>Если вы не успели
-                        на вебинар, всегда можете посмотреть запись в личном кабинете.</p>
-                </div>
-            </div>
-            <footer>
-                <div class="logo-icons"><img src="logo-white.svg" alt="logo">
-                    <img src="s-icons.svg" alt="s-icons">
-                </div>
-
-                <div class="contact">
-                    <span><img src="phone.svg" alt="phone">+7 (499) 39-146-39</span>
-                    <span><img src="mail.svg" alt="mail">hello@synchronize.ru</span>
-                </div>
-                <p class="copyright">© Синхронизация, 2020</p>
-            </footer>
+    </div>
+    <footer>
+        <div class="logo-icons"><img src="logo-white.svg" alt="logo">
+            <img src="s-icons.svg" alt="s-icons">
         </div>
+
+        <div class="contact">
+            <span><img src="phone.svg" alt="phone">+7 (499) 39-146-39</span>
+            <span><img src="mail.svg" alt="mail">hello@synchronize.ru</span>
+        </div>
+        <p class="copyright">© Синхронизация, 2020</p>
+    </footer>
+    </div>
 
 
 </body>
